fix vh on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,14 +5,10 @@
 	margin: 0;
 }
 
-html {
-	height: 100%;
-}
-
 body {
 	background-color: #DCDCDC;
 	margin: 0 auto;
-	height: 100%;
+	height: -webkit-fill-available;
 }
 
 h2 {
@@ -88,26 +84,11 @@ h2 {
 	transform: translateY(-2px);
 }
 
-.modal-bg {
-	z-index: 1;
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	background-color: rgba(128,128,128,0.5);
-	padding: 0;
-	margin: 0;
-	display:flex;
-	align-items: flex-start;
-	justify-content: center;
-}
-
 .bid-modal {
 	z-index: 1;
 	position: fixed;
-	height: 80%;
-	width: 90%;
+	height: 95vh;
+	width: 90vw;
 	background-color: white;
 	padding: 5%;
 	display: flex;
@@ -117,7 +98,21 @@ h2 {
 	border-radius: 8px;
 	justify-items: flex-end;
 	justify-content: space-between;
-	margin-top: 5%;
+}
+
+.modal-bg {
+	z-index: 1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgba(128,128,128,0.5);
+	padding: 0;
+	margin: 0;
+	display:flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .modal-header-container {
@@ -152,7 +147,7 @@ h2 {
 
 .modal-item-img {
 	width: 100%;
-	height: 40%;
+	height: 30%;
 	object-fit: cover;
 	border-radius: 8px;
 	margin-bottom: 5%;
@@ -234,6 +229,6 @@ p {
 }
 
 .splash-img {
-	width: 60%;
+	width: 50%;
 	object-fit: contain;
 }
